# Enhancing-Deep-Learning-with-Bayesian-Inference

./: .gitignore  README.md  pyproject.toml  theano_b4_checks.ipynb
.github/workflows/: tests.yml
bdl/active_learning/: acquisition.py  config.py  data.py  main.py  metrics.py  model.py  plot.py  utils.py
bdl/adversarial/: data.py  main.py  model.py
bdl/ch02/: ood.py  train.py
bdl/ch02/ood/: README.md  data.py  ood.py  train.py
bdl/ch03/adversarial/: README.md  main.py
bdl/ch03/ood/: README.md  data.py  main.py  model.py  ood.py
bdl/ch05/bbb/: bbb_example.py
bdl/ch05/pbp/: PBP_net.py  main.py  network.py  network_layer.py  pbp.py  prior.py
bdl/ch05/pbp_b4tf/: main.py  pbp.py  pbp_layer.py
bdl/ch05/pbp_tf/: main.py  pbp.py  pbp_net.py
bdl/ch05/pbp_theano/: PBP_net.py  main.py  network.py  network_layer.py  pbp.py
bdl/ch07/uncertainty_image_classification/: main.py  model.py
bdl/ch08/active_learning/: acquisition.py  main.py  model.py  plot.py
bdl/ch08/adversarial/: README.md  data.py  main.py
bdl/ch08/ood/: main.py
bdl/pbp/: __init__.py  main.py  math.py  pbp.py  pbp_layer.py  utils.py
ch02/: sampling.py  sampling_code.py
ch03/adversarial/: README.md  main.py
ch03/ood/: README.md  data.py  main.py  model.py  ood.py  train.py
ch04/: distributions.py
ch05/: compare.py
ch05/bbb/: bbb_example.ipynb  bbb_example.py  chapter_5_bbb.ipynb
ch05/pbp/: network.py  network_layer.py  pbp.py  pbp_net.py  prior.py
ch05/pbp_b4tf/: gamma_initializer.py  main.py  model_base.py  pbp.py  pbp_layer.py
ch05/pbp_tf/: main.py  network.py  network_layer.py  pbp.py  pbp_net.py  prior.py
ch05/pbp_theano/: PBP_net.py  Untitled0.ipynb  main.py  network.py  network_layer.py  pbp.py  prior.py
ch06/: ensemble.ipynb  mc_dropout.ipynb
ch07/uncertainty_image_classification/: README.md  data.py  main.py  model.py  uncertainty.py
ch07/uncertainty_regression/: chapter_7_regression_sources_uncertainty.ipynb
ch08/: data_set_shift.ipynb
ch08/active_learning/: README.md  acquisition.py  config.py  data.py  main.py  metrics.py  plot.py  utils.py
ch08/adversarial/: README.md  data.py  main.py  model.py
ch08/calibration/: __init__.py  accuracy.py  bbb.py  calibration.py  constants.py  corruption.py  corruption_image.py  ensemble.py  main.py  model.py  scores.py
ch08/ood/: README.md  main.py
ch08/reinforcement_learning/: README.md  environment.py  models.py  rl_experiment.py  rl_experiment_uncertainty.py
core_models/: bayes_by_backprop.py  ensemble.py  mc_dropout.py  pbp.py
notebooks/: pbp.ipynb
notebooks/ch06/: ensemble.ipynb  last_layer_methods.ipynb  mc_dropout.ipynb
notebooks/ch08/: data_set_shift.ipynb
tests/: test_pbp.py
tests/models/: pbp_model.pickle
tests/params/: b.npy  m_w.npy  v_w.npy
