[tool.poetry]
name = "bayesian-deep-learning"
version = "0.1.0"
description = ""
authors = ["Jochem Gietema <jochem@giete.ma>"]
packages = [ {include = "bdl"} ]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
tensorflow = "^2.17.0"
click = "^8.1.7"
six = "^1.16.0"
tqdm = "^4.66.5"
pandas = "^2.2.2"
keras = "^3.5.0"
pyarrow = "^17.0.0"
scikit-learn = "^1.5.1"
wandb = "^0.17.9"


[tool.poetry.dev-dependencies]
pytest = "*"
black = {version = "*", allow-prereleases = true}
isort = "*"
flake8 = "*"
taskipy = "*"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"


[tool.poetry.group.adversarial.dependencies]
cleverhans = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "poetry run pytest"
lint = "poetry run black . && poetry run isort . && poetry run flake8 tests"

[tool.black]
line-length = 88
include = "\\.pyi?$"
exclude = """
/(
    \\.git
  | \\.tox
  | \\.venv
  | notebooks
  | reports
)/
"""
