[tool.poetry]
name = "bayesian-deep-learning"
version = "0.1.0"
description = ""
authors = ["Jochem Gietema <jochem@giete.ma>"]
packages = [ {include = "bdl"} ]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
tensorflow = "^2.17.0"
click = "^8.1.7"
six = "^1.16.0"
tqdm = "^4.66.5"
pandas = "^2.2.2"
keras = "^3.5.0"
pyarrow = "^17.0.0"
scikit-learn = "^1.5.1"
wandb = "^0.17.9"
tensorflow-probability = "^0.24.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
taskipy = "^1.13.0"

[tool.poetry.group.adversarial.dependencies]
cleverhans = "^4.0.0"

[tool.ruff]
line-length = 100
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.taskipy.tasks]
ruff = { cmd = "ruff format . && ruff check --fix . && ruff format .", help = "Format code and check with ruff."}
ruff-check = { cmd = "ruff format --diff . && ruff check .", help = "Check style compliance."}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
